tests/errors/closureInferNoHint.milo
// @error: cannot infer type for parameter 'x'

fn main() {
    let f = (x) => x + 1
}
